--- a/LOC/LOC.csproj
+++ b/LOC/LOC.csproj
@@ -116,6 +116,9 @@
     <Compile Include="MVVM\Views\RecipeView.xaml.cs">
       <DependentUpon>RecipeView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MVVM\Views\SliderValue.xaml.cs">
+      <DependentUpon>SliderValue.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MVVM\Views\StatisticView.xaml.cs">
       <DependentUpon>StatisticView.xaml</DependentUpon>
     </Compile>
@@ -196,6 +199,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="MVVM\Views\RecipeView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="MVVM\Views\SliderValue.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
